# voxels

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
cmake/: FindGLFW.cmake
phys/: CMakeLists.txt  phys.cpp  phys.hpp
res/shaders/: dynamic.glslv  world.glslv
src/: CMakeLists.txt  camera.c  camera.h  chunk_mesh.c  chunk_mesh.h  collision_mesh.c  collision_mesh.h  error.h  face.c  face.h  log.h  renderer.c  renderer.h  voxel_game.c  voxel_game.h  world.c  world.h
tests/: CMakeLists.txt  tests.c
